--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "lint:staged": "lint-staged",
     "test:clean": "rimraf ./coverage",
     "test": "mocha ./src/tests/**/*.js -R spec --timeout 2000000",
-    "test:lib": "mocha ./lib/tests/**/*.js -R spec --timeout 2000000",
-    "test-travis": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/tests/**/*.js -R spec --timeout 2000000",
-    "coveralls": "npm run test-travis && cat ./coverage/lcov.info | coveralls"
+    "test:coverage": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/tests/**/*.js -R spec --timeout 2000000",
+    "test:lib": "mocha ./lib/tests/**/*.js -R spec --timeout 2000000"
   },
   "engines": {
     "npm": ">=3",
@@ -139,7 +138,6 @@
     "rimraf": "2.3.4",
     "cross-env": "1.0.7",
     "chai": "3.5.0",
-    "coveralls": "2.11.9",
     "crypto": "0.0.3",
     "eslint": "2.10.1",
     "eslint-config-airbnb": "9.0.1",
