--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
   "dependencies": {
     "bn.js": "5.2.1",
     "js-sha3": "0.5.5",
-    "number-to-bn": "1.7.0"
+    "@ethjs-staging/number-to-bn": "1.7.1-rc0"
   },
   "devDependencies": {
     "bignumber.js": "9.1.1",
